# sllm

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/_sllm_code/: __init__.py  implement.prompt
src/_sllm_git_message/: __init__.py  prompt.txt
src/_sllm_translate/: __init__.py  prompt.txt
src/sllm/: api.py  app.py  common.py  container.py
