[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sllm"
version = "2025.04.07"
authors = [
	{email = "mhorky@redhat.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
	"requests",
]

[project.optional-dependencies]
dev = [
	"ruff",
	"mypy",
	"types-requests",
]

[tool.setuptools.packages.find]
where = ["src/"]

[tool.ruff]
line-length = 80

[tool.mypy]
check_untyped_defs = true
allow_redefinition = true
strict_equality = true
extra_checks = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true
